<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/custom_input"
    tools:context=".activity.LoginActivity"
    android:padding="30dp"
    >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        app:srcCompat="@mipmap/logomain" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_gravity="center"
        android:text="@string/welcome"
        android:textSize="40dp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/emails"
        android:inputType="textEmailAddress"
        android:paddingLeft="2dp" />


    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/loginButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"
            android:text="@string/logIn" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:text="@string/forgotPassword"
            android:textColor="@android:color/holo_blue_light"
            android:textColorLink="@android:color/holo_blue_light"
            />
    </LinearLayout>


    <Button
        android:id="@+id/registerButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_button"
        android:text="@string/signUp"
        />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"></com.google.android.gms.common.SignInButton>


</LinearLayout>