<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer"
    tools:context=".activity.MainActivity">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">
    <include
        android:id="@+id/include"
        layout="@layout/drawer_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ORDER SUMMARY"
            android:layout_gravity="center"
            android:id="@+id/orderInformation"
            android:textSize="25dp"></TextView>
        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listadoCompra"
            android:layout_weight="1"></ListView>
        <EditText
            android:id="@+id/nombreDestinatario"
            android:layout_marginTop="30dp"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:hint="@string/recipientName">
        </EditText>
        <EditText
            android:id="@+id/metodoFacturacion"
            android:layout_marginTop="30dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/creditCard">
        </EditText>
        <EditText
            android:id="@+id/direccionEnvio"
            android:layout_marginTop="30dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/shippingAddres">
        </EditText>

        <Button
            android:id="@+id/btnComprar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_button"
            android:text="@string/buy"></Button>
    </LinearLayout>
</LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/navigation_view"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/drawer_header"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">
    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>